# job_finder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  base.Dockerfile  base.Dockerfile.dockerignore  docker-compose.dev.yml  docker-compose.yml  fastapi.Dockerfile  fastapi.Dockerfile.dockerignore  frontend.Dockerfile  frontend.Dockerfile.dockerignore  kedro.Dockerfile  kedro.Dockerfile.dockerignore  kedro_requirements.txt  mypy.ini  pyproject.toml  streamlit.Dockerfile  streamlit.Dockerfile.dockerignore
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: CI.yml  build-publish.yml  ci.yml  deploy.yml  deploy_app.yml  release.yml  security-deps.yml
conf/base/: catalog.yml  credentials.yml  parameters.yml
docs/source/: conf.py  index.rst
k8s/api/: deployment.yml  service.yml
k8s/frontend/: deployment.yml  ingress.yml  service.yml
k8s/kedro/: job.yml
k8s/redis/: deployment.yml
notebooks/: base_notebook.ipynb  dernières_offres.json  nom_du_fichier
src/job_finder/: __init__.py  __main__.py  datasets.py  pipeline_registry.py  settings.py  utils.py
src/job_finder/pipelines/job_embedding/: __init__.py  nodes.py  pipeline.py
src/job_finder/pipelines/model_training/: nodes.py  pipeline.py
src/job_finder/pipelines/score_relevance/: nodes.py  pipeline.py
src/job_finder/pipelines/send_email/: nodes.py  pipeline.py
src/job_finder/pipelines/wttj_scraping/: nodes.py  pipeline.py
streamlit_app/: app.py  app_requirements.txt  requirements.txt  streamlit.Dockerfile
terraform/: README.md  deploy.sh  install_chromadb.sh  main.tf  terraform.tfvars.example
tests/: conftest.py
tests/pipelines/test_score_relevance/: test_nodes.py  test_pipeline.py
tests/src/job_finder/: conftest.py  test_utils.py
tests/src/job_finder/pipelines/test_job_embedding/: __init__.py  test_nodes.py
tests/src/job_finder/pipelines/test_score_relevance/: test_nodes.py  test_pipeline.py
tests/src/job_finder/pipelines/test_send_email/: __init__.py  test_nodes.py
tests/src/job_finder/pipelines/test_wttj_scraping/: __init__.py  test_nodes.py
tests/web_app/: conftest.py
tests/web_app/backend/: test_main.py
tests/web_app/backend/routes/: test_cv.py  test_jobs.py
tests/web_app/backend/services/: test_azure_storage.py  test_cv_matching.py  test_cv_processing.py  test_s3.py
web_app/backend/: main.py  requirements.txt  setup.py
web_app/backend/routes/: cv.py  jobs.py
web_app/backend/services/: azure_storage.py  cv_matching.py  cv_processing.py  kedro_context.py  s3.py
web_app/frontend/: app.py  requirements.txt  style.css
web_app/frontend/pages_/: explore_offers.py  home.py
web_app/frontend/utils/: api_client.py
web_app/modern_frontend/: README.md  app.js  cv_matching.html  explore.html  index.html  main.py  server.py
