[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job_finder"
version = "0.1.0"
description = "An app to find jobs"
authors = [
    {name = "Armand Masseau", email = "armand.masseau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML & Data Science
    "kedro>=1.0.0",
    "kedro[jupyter]>=1.0.0",
    "kedro-datasets[pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset,json-jsondataset]>=3.0",
    "kedro-viz>=6.7.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.5.1",
    "seaborn>=0.12.1",
    # Web Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "streamlit>=1.28.0",
    "streamlit-lottie>=0.0.5",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # Cloud & Storage
    "boto3>=1.26.0",
    "s3fs>=2023.1.0",
    "redis>=4.5.0",
    # Utilities
    "requests>=2.28.0",
    "pillow>=9.0.0",
    # Vector Database & Embeddings
    "chromadb>=0.4.0,<0.4.15",
    "sentence-transformers>=2.2.0,<2.3.0",
    "transformers>=4.21.0",
    "torch>=1.11.0",
    "onnxruntime>=1.15.0,<1.20.0",
    "huggingface-hub>=0.16.0,<0.20.0",
    # Jupyter
    "ipython>=8.10.0",
    "jupyterlab>=3.6.0",
    "notebook>=6.5.0",
    "azure-storage-blob>=12.26.0",
    "adlfs>=2025.8.0",
    # CV Processing
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.7.0",
    "python-docx>=0.8.11",
    "spacy>=3.8.7",
]

[project.scripts]
job-finder = "job_finder.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.2.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=1.7.1",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.0.0",

    # Code quality
    "ruff>=0.1.8",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pylint>=2.15.0",

    # Development tools
    "pre-commit>=3.3.0",
    "pipdeptree>=2.9.0",
    "ipywidgets>=8.0.0",

    # Monitoring and profiling
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
]

docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx-rtd-theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx-copybutton==0.5.2",
    "ipykernel>=5.3,<7.0",
    "jinja2<3.2.0",
    "myst-parser>=1.0,<2.1",
]

all = ["job_finder[dev,docs]"]

# Tool configurations
[tool.hatchling.version]
path = "src/job_finder/__init__.py"

[tool.hatchling.build.targets.wheel]
packages = ["src/job_finder"]

[tool.kedro]
package_name = "job_finder"
project_name = "job_finder"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'PySpark']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/job_finder -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.pylint.main]
fail-under = 7

[dependency-groups]
dev = [
    "pbr>=7.0.1",
    "pipdeptree>=2.28.0",
]

[tool.kedro_telemetry]
project_id = "768acdb585b449b5a92086407653f15c"
